# daglig

./: README.md
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  daglig.install  daglig.opam  daglig.opam.template  dune-project  start_db.sh
backend/lib/: abc.ml  database.ml  database.mli  dune  lib.ml  server.ml
backend/lib/api/: dune  signup.ml  task.ml
backend/lib/database/: connection.ml  dune  migration.ml  oauth_account.ml  task.ml  task.mli  types.ml  user.ml
backend/test/: database_test.ml  db_test.ml  dune  simple_test.ml
frontend/: .prettierrc.json  README.md  auth.js  eslint.config.js  package-lock.json  package.json
frontend/app/: layout.js  page.js
frontend/app/abc/: page.js
frontend/app/api/proxy/[...path]/: route.js
frontend/app/auth/signin/: page.js
frontend/app/components/: ChartTooltip.js  OAuthButton.js  RedirectButton.js  TaskManager.js
frontend/app/components/TaskManager/: AddCardModal.js  TaskManager.js
frontend/app/home/: page.js
frontend/app/login/: page.js
frontend/app/styles/: CardManager.module.css  globals.css  landingPage.module.css
frontend/src/: App.vue
frontend/src/components/: TheWelcome.vue
