(lang dune 3.16)

(name daglig)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name daglig)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends
  ocaml
  dune
  core
  core_unix
  ppx_jane
  ppx_expect
  ppx_assert
  ppx_string
  ppx_here
  ppx_let
  ppx_custom_printf
  ppx_sexp_message
  (pg_query
   (= 0.9.6))
  eio
  eio_main
  caqti
  caqti-eio
  caqti-driver-postgresql
  ppx_rapper_eio
  alcotest)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
