(lang dune 3.16)

(name daglig)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name daglig)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends
  ; Compiler & build system
  ocaml
  dune
  ; Prelude
  core
  core_unix
  ; json
  yojson
  ; preprocessors, testing, printing, string interpolation, etc.
  ppx_jane
  ppx_expect
  ppx_assert
  ppx_string
  ppx_here
  ppx_let
  ppx_custom_printf
  ppx_sexp_message
  ppx_yojson_conv
  ; Multicore
  eio
  eio_main
  ; Server
  piaf
  ; Database
  caqti
  caqti-eio
  caqti-driver-postgresql
  (pg_query
   (= 0.9.6))
  ppx_rapper_eio
  ; Testing framework
  alcotest)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
